<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginRight="2dp"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/output"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="#673AB7"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal"></LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="0"
                    android:textAlignment="viewEnd"
                    android:textSize="34sp" />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/operations"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="#000000"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/output">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginRight="6dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:paddingTop="20dp">

            <Button
                android:id="@+id/ac"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="allClear"
                android:text="AC"
                android:textAlignment="center"
                android:textSize="20sp"
                app:iconPadding="0dp" />

            <Button
                android:id="@+id/num7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="add7"
                android:text="@string/num7key"
                android:textSize="20sp"
                app:iconPadding="0dp" />

            <Button
                android:id="@+id/num4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="add4"
                android:text="@string/num4key"
                android:textSize="20sp"
                app:iconPadding="0dp" />

            <Button
                android:id="@+id/num1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="add1"
                android:text="@string/num1key"
                android:textSize="20sp" />

            <Button
                android:id="@+id/num00"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="add00"
                android:text="@string/num00key"
                android:textSize="20sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginRight="6dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:paddingTop="20dp">

            <Button
                android:id="@+id/percent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="opPercent"
                android:text="%"
                android:textSize="20sp"
                app:iconPadding="0dp" />

            <Button
                android:id="@+id/num8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="add8"
                android:text="@string/num8key"
                android:textSize="20sp"
                app:iconPadding="0dp" />

            <Button
                android:id="@+id/num5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="add5"
                android:text="@string/num5key"
                android:textSize="20sp"
                app:iconPadding="0dp" />

            <Button
                android:id="@+id/num2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="add2"
                android:text="@string/num2key"
                android:textSize="20sp"
                app:iconPadding="0dp" />

            <Button
                android:id="@+id/num0"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="add0"
                android:text="@string/num0key"
                android:textSize="20sp"
                app:iconPadding="0dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:paddingTop="20dp">

            <Button
                android:id="@+id/del"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"

                android:textSize="20sp"
                app:icon="@android:drawable/ic_input_delete"
                app:iconGravity="textEnd"
                app:iconPadding="0dp"
                app:iconSize="28dp" />

            <Button
                android:id="@+id/num9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="add9"
                android:text="@string/num9key"
                android:textSize="20sp"
                app:iconPadding="0dp" />

            <Button
                android:id="@+id/num6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="add6"
                android:text="@string/num6key"
                android:textSize="20sp"
                app:iconPadding="0dp" />

            <Button
                android:id="@+id/num3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="add3"
                android:text="@string/num3key"
                android:textSize="20sp"
                app:iconPadding="0dp" />

            <Button
                android:id="@+id/point"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="addFloatingPoint"
                android:text="."
                android:textSize="20sp"
                app:iconPadding="0dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="6dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:paddingTop="20dp">

            <Button
                android:id="@+id/divide"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="opDivide"
                android:text="/"
                android:textSize="20sp"
                app:iconPadding="0dp" />

            <Button
                android:id="@+id/multiply"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="opMultiply"
                android:text="*"
                android:textSize="20sp"
                app:iconPadding="0dp" />

            <Button
                android:id="@+id/subtract"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="opSubtract"
                android:text="-"
                android:textSize="20sp"
                app:iconPadding="0dp" />

            <Button
                android:id="@+id/add"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="opAddition"
                android:text="+"
                android:textSize="20sp"
                app:iconPadding="0dp" />

            <Button
                android:id="@+id/equals"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="opPrintValue"
                android:text="="
                android:textSize="20sp"
                app:iconPadding="0dp" />

        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>